<resources>
    <string name="app_name">DC Comics</string>
    <string name="superman">Superman</string>
    <string name="nombre_superman">Clark Kent</string>
    <string name="nombre">Nombre:</string>
    <string name="powers">Poderes:</string>
    <string name="poderes_superman">Super fuerza, vuelo, invulnerabilidad, super velocidad, vision con calor, congelar, vision con rayos x</string>
    <string name="registro">Registro de un superheroe</string>
    <string name="registrar">Registrar</string>
</resources>